--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -5,3 +5,5 @@ set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 #GLAD
 add_subdirectory(glad)
+#stb
+target_include_directories(glad INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}") # Not sure how to include dir for a target wise build so be it
