rn we are in 3d note: it works but it needs a hella lot of refactoring **especially main function** todo: make code more consist

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,4 +24,4 @@ add_executable(app ${SOURCE})
 
 target_compile_features(app PRIVATE cxx_std_17)
 
-target_link_libraries(app glfw glad)
+target_link_libraries(app glfw glad glm)
