--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -7,3 +7,5 @@ set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 add_subdirectory(glad)
 #stb
 target_include_directories(glad INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}") # Not sure how to include dir for a target wise build so be it
+#glm
+add_subdirectory(glm)
