Added Freetype library. Added font loading, bitmap font, draw_text func

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,8 @@ set(SOURCE
     src/draw/shader.cpp
     src/draw/texture.cpp
     src/core/mouse.cpp
+    src/core/font.cpp
+    src/draw/primitives.cpp
     )
 
 add_executable(app ${SOURCE})
@@ -24,4 +26,6 @@ add_executable(app ${SOURCE})
 
 target_compile_features(app PRIVATE cxx_std_17)
 
-target_link_libraries(app glfw glad glm)
+target_link_libraries(app glfw glad glm freetype)
+
+file(COPY assets DESTINATION .)
