--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = libs/glm
 	url = https://github.com/g-truc/glm
 	branch = master
+[submodule "libs/freetype"]
+	path = libs/freetype
+	url = https://github.com/freetype/freetype
